--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aidol/cli",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A command line tool for quickly building blog sites",
   "main": "bin/index.js",
   "bin": {
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/yisibell/aidol-cli",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yisibell/aidol-cli"
+    "url": "https://github.com/yisibell/aidol-cli.git"
   },
   "bugs": {
     "url": "https://github.com/yisibell/aidol-cli/issues"
